--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       post_telegram:
         description: 'Post to Telegram'
-        required: true
+        required: false
         type: boolean
   push:
     branches: [LSPosed]
